[WIP][multiple error type] recover from panic by multiple error type
